--- a/Pages/Shared/_PostPartial.cshtml
+++ b/Pages/Shared/_PostPartial.cshtml
@@ -1,6 +1,7 @@
 @model NewsSite.BL.Post
 
 <div class="post-container" data-post-id="@Model.PostID">
+    <h6>postpartial.cshtml</h6>
     <div class="post-header">
         <div class="user-info">
             <img src="@(Model.UserProfilePicture ?? "/uploads/profile-pictures/user_1_20250723_110716_92e835da.jpeg")"
